# cryoPhold

./: LICENSE  README.md  docker-compose.yml
AF-output/: README.md  combined.xtc
AF-output/Postprocess/: remove-hydrogen.py
AF-output/Prots/: README.txt
Boltz-output/: combined.xtc
Jax0.4.13env/: Dockerfile
Maps/: README.md
alphafold/: Dockerfile
alphafold_env/: Dockerfile
cryoModule/: cryoPhold.py  env.yml  setup.sh
cryoModule/input/: example.fasta
cryoModule/results/: log.txt
cryoModule/saxstats/: __init__.py  saxstats.py
mlmodule/: README.md  pyproject.toml
mlmodule/examples/: command.sh  predict.py  train.py
mlmodule/src/timelaggedcv/dataset/: utils.py
mlmodule/src/timelaggedcv/vamp/: vamp.py
scripts/: align.sh  colabfold.sh  combine-pdb.py  dihedral.py  refine.sh  split_pdb.py
simmodule/: insert-posre.sh  process.sh  tleap.all
simmodule/inputs/: md.mdp  min.in
