[project]
authors = [{name = "amardt", email = "andreasmardt@gmail.com"}]
dependencies = []
name = "TimeLaggedCV"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
timelaggedcv = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.2.3,<3"
pytorch = ">=2.5.1,<3"
matplotlib = ">=3.10.0,<4"
lightning = ">=2.5.0.post0,<3"
addict = ">=2.4.0,<3"
parmed = ">=4.3.0,<5"
mdtraj = ">=1.10.3,<2"
h5py = ">=3.13.0,<4"
"ruamel.yaml" = ">=0.18.10,<0.19"
